Fixed learn lang banners on mobile by removing the *INCORRECT* class of .home-banner

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -519,6 +519,7 @@ body.stop-scrolling {
     display: block;
     font-size: 1.5rem;
     font-family: "Merriweather-Light";
+    line-height: 52px;
 }
 
 .learn-lang-content {
